src/ProductInfoPage.css
/* ProductInfoPage.css */
body, html {
  margin: 0;
  padding: 0;
  font-size: 16px;
}

.product-info-page {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: black;
  overflow-y: auto;
  overflow-x: hidden;
}

.product-info-content-and-bottom {
  position: relative;
  height: 100vh;
}

.product-info-content {
  margin-top: var(--black-bar-top-height);
  margin-left: var(--black-bar-width);
  margin-right: var(--black-bar-width);
  display: flex;
  flex-direction: row;
  gap: 2rem;
  overflow-y: auto;
  overflow-x: hidden;
  background-image: url('./img/background-no-logo.png');
}

.product-header {
  padding: 30px 0 0 0;
  text-align: center;
  font-size: 1.5rem;
  overflow-x: hidden;
}

.product-info-order-panel {
  margin-left: 5vw;
  margin-top: 5rem;
  border: 1px solid black;
  border-radius: 5px;
}

.product-main-image {
  width: 500px; /* Set a fixed width of 90% of the container width */
  max-width: 80%;
  height: auto; /* Maintain the aspect ratio of the original image */
  border: 1px solid black;
  border-radius: 5px;
}

.product-info-panel {
  border: 1px solid black;
  margin-right: 5vw;
  border-radius: 5px;
  margin-top: 5rem;
  padding: 20px;
  width: 50%;
  height: fit-content;
  align-items: flex-start;
}

.info-field {
  text-align: left;
}

p {
  font-size: 1.2rem;
}

.info-field h2 {
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: 0.5rem;
  border-bottom: 1px solid black;;
}

.add-to-cart-button {
  margin-top: 1rem;
}

/* Hide the scrollbar for Firefox */
.product-info-content {
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

/* Hide the scrollbar for Chrome, Edge, and Safari */
.product-info-content::-webkit-scrollbar {
  width: 6px;
}

.product-info-content::-webkit-scrollbar-thumb {
  background-color: transparent;
}

.image-dots {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  margin-bottom: 2rem
}

.image-dot {
  width: 10px;
  height: 10px;
  margin: 0 5px;
  border-radius: 50%;
  background-color: #ccc;
  transition: background-color 0.3s ease;
}

.image-dot.active {
  background-color: #333;
}

.option {
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 1rem;
  display: flex;
}

.quantity-option {
  margin-left: 100px;
  margin-right: 100px;
  margin-top: 1rem;
  display: flex;
}

.order-options {
  justify-content: left;
  text-align: left;
}

.label-weight,
.label-grind-size,
.label-quantity {
  font-size: 1.5rem;
  margin-left: 1rem;
  margin-top: 15px;
}

.quantity-control {
  padding: 3px 10px;
  background-color: black;
  color: white;
  border: none;
  cursor: pointer;
  font-size: 20px;
  border-radius: 20px;
  margin-left: 0px;
  margin-right: 0px;
}

.quantity-option {
  display: column;
}

.quantity-input {
  margin-left: 10px;
  margin-top: 0px;
}

.label-total {
  text-align: center;
  font-size: 2rem;
  margin-right: 0.5rem;
}

.total {
  margin-top: 0;
  padding: 0;
  text-align: center;
}
.total-price-text {
  font-size: 2rem;
  margin-left: 1rem;
  font-family: 'Montserrat Alternates', sans-serif !important;
}

.option-input-field {
  margin-left: 20px;
  margin-right: 20px;
  padding: 3px 10px;
  background-color: black;
  color: white;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
  border-radius: 15px;
}

#quantity {
  width: 50%;
}

.add-to-cart-button {
  margin-top: 0;
}

.subscribe-button {
  margin-top: 0;
  margin-bottom: 0;
}

@media (max-width: 1000px) {
  .product-main-image {
    width: 50%;
  }
  .product-info-content {
    flex-direction: column; /* Change to column layout */
    align-items: center;
    padding: 1rem; /* Adjust padding as needed */
  }
  .product-info-order-panel {
    margin-left: 4vw;
    margin-right: 4vw;
    border: none;
    margin-top: 0;
  }
  .product-info-panel {
    margin-left: 4vw;
    margin-right: 4vw;
  }
  .product-header {
    padding: 0;
    margin-top: 0;
  }
}

@media (max-width: 768px) {
  .label-weight,
  .label-grind-size,
  .label-quantity {
    font-size: 1.1rem;
  }

  #quantity {
    width: 30px;
    margin-left: 5px;
    margin-right: 5px;
  }

  #grind-size, #weight, #quantity,  .quantity-control {
    font-size: 0.9rem;
  }
 
  .product-header {
    font-size: 1rem;
  }

  .option-input-field {
    font-size: 1rem;
  }

  body {
    overflow-x: hidden;
  }
}

